# vandelay

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  README.md  VandelayExpert.txt  index.html  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
changelog/: index.html
cli/: index.html
cli/config/: index.html
cli/cron/: index.html
cli/daemon/: index.html
cli/knowledge/: index.html
cli/memory/: index.html
cli/onboard/: index.html
cli/start/: index.html
cli/status/: index.html
cli/tools/: index.html
cli/update/: index.html
concepts/: index.html
concepts/agents/: index.html
concepts/architecture/: index.html
concepts/channels/: index.html
concepts/knowledge/: index.html
concepts/memory/: index.html
concepts/safety/: index.html
concepts/teams/: index.html
configuration/: index.html
deployment/: index.html
deployment/security/: index.html
deployment/troubleshooting/: index.html
deployment/vps/: index.html
docs/: CONFIG.md  docs-update-plan.md  index.md  llms.txt
docs-update-plan/: index.html
docs/cli/: config.md  cron.md  daemon.md  index.md  knowledge.md  memory.md  onboard.md  start.md  status.md  tools.md  update.md
docs/concepts/: agents.md  architecture.md  channels.md  index.md  knowledge.md  memory.md  safety.md  teams.md
docs/configuration/: index.md
docs/deployment/: index.md  security.md  troubleshooting.md  vps.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/guides/: agent-templates.md  custom-tool.md  first-team.md  google-services.md  index.md  scheduling.md  telegram-setup.md  tui-guide.md  workspace-files.md
docs/stylesheets/: extra.css
docs/tools/: built-in.md  index.md
docs/tutorials/: building-a-toolkit.md  index.md
getting-started/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/: index.html
guides/agent-templates/: index.html
guides/custom-tool/: index.html
guides/first-team/: index.html
guides/google-services/: index.html
guides/scheduling/: index.html
guides/telegram-setup/: index.html
guides/tui-guide/: index.html
guides/workspace-files/: index.html
scripts/: fresh-test.ps1
search/: search_index.json
src/vandelay/: __init__.py  __main__.py
stylesheets/: extra.css
systemd/: vandelay.service
tests/: conftest.py
tests/integration/: .env.example  conftest.py  google_token.json.example  test_gmail.py  test_google_calendar.py  test_google_drive.py  test_google_sheets.py  test_notion.py
tests/test_agents/: test_factory.py  test_member_resolution.py  test_prompts.py  test_specialists.py  test_team_factory.py  test_templates.py
tests/test_channels/: test_telegram.py  test_whatsapp.py
tests/test_cli/: test_daemon.py  test_headless_onboard.py  test_onboard_redesign.py  test_tools_commands.py
tests/test_config/: test_google_config.py  test_models.py  test_secrets.py  test_settings.py  test_team_config.py
tests/test_core/: test_agent_provider.py  test_chat_service.py  test_chat_service_chunked.py  test_deep_work.py  test_memory_migration.py
tests/test_knowledge/: test_corpus.py  test_embedder_factory.py  test_knowledge_cli.py  test_setup.py  test_vectordb.py
tests/test_memory/: test_setup.py
tests/test_models/: test_catalog.py
tests/test_process/: test_watcher.py
tests/test_routing/: test_classifier.py  test_middleware.py  test_router.py
tests/test_scheduler/: test_cron_cli.py  test_engine.py  test_heartbeat.py  test_models.py  test_scheduler_tools.py  test_store.py
tests/test_server/: test_health.py
tests/test_tasks/: test_store.py  test_tools.py
tests/test_threads/: test_commands.py  test_registry.py
tests/test_tools/: test_camofox.py  test_camoufox.py  test_custom_tools.py  test_deep_work_tools.py  test_gmail_html.py  test_manager.py  test_manager_google.py  test_member_management.py  test_notify.py  test_registry.py  test_safety.py  test_task_queue.py  test_tool_management.py  test_tool_request.py  test_workspace.py
tests/test_tui/: test_agents_tab.py  test_chat_tab.py  test_memory_tab.py  (+3 more)
tools/: index.html
tutorials/: index.html
(+117 files in other folders)
